took out fb button, changed single entry stuff

--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -39,12 +39,12 @@
             {{ 'continueGoogle' | translate }}
           </ion-button>
         </ion-row>
-        <ion-row class="registration-btn">
+        <!-- <ion-row class="registration-btn">
           <ion-button name="star" fill="outline" class="login-button" (click)="facebookRegistrationHandler()">
             <span><img class="comp-logo" src="../../assets/images/fb-logo.svg.png" alt="facebook icon" /></span>
             {{ 'continueFacebook' | translate }}
           </ion-button>
-        </ion-row>
+        </ion-row> -->
         <p id="forgot" (click)="navForgot()">
           {{ 'forgotPassword' | translate }}
           <span id="click-here">{{ 'clickHere' | translate }}</span>
