--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -12,7 +12,7 @@
         <h2 class="hero-subheader" *ngIf="!mobile" [ngClass]="{ 'space-hero-subt': !mobile }">
           {{ 'editionNumber' | translate }}
         </h2>
-        <h2 class="hero-subheader" *ngIf="!mobile" [ngClass]="{ 'space-hero-subt': !mobile }">
+        <h2 class="hero-subheader space-hero-subt-years">
           {{ 'dates' | translate }}
         </h2>
       </div>
