--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,8 @@
                 <ion-item>
                     <ion-select okText="OK" interface="popover" [cancelText]="language == 'ro' ? 'Închide' : 'Cancel'"
                         [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
-                        <ion-select-option value="ro">🇷🇴 Română</ion-select-option>
-                        <ion-select-option value="en">🇺🇸 English</ion-select-option>
+                        <ion-select-option value="ro">RO</ion-select-option>
+                        <ion-select-option value="en">EN</ion-select-option>
                     </ion-select>
                 </ion-item>
             </ion-list>
