--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -1,135 +1,27 @@
 <h2 class="section-title">{{ 'officialPartners' | translate }}</h2>
 <div class="row">
   <div class="col vertical-align-content">
-    <img
-      src="../../assets/images/Sponsors/3G-Sport.png"
-      class="sponsor-image"
-      alt="3G-Sport"
-    />
-    <img
-      src="../../assets/images/Sponsors/accent.png"
-      class="sponsor-image"
-      alt="Accent Travel and Events"
-    />
-    <img
-      src="../../assets/images/Sponsors/AC-symbol-pozitiv.png"
-      class="sponsor-image"
-      alt="Aqua Carpatica"
-    />
-    <img
-      src="../../assets/images/Sponsors/Logo_Adevărul.png"
-      class="sponsor-image"
-      alt="Adevărul"
-    />
-    <img
-      src="../../assets/images/Sponsors/Agerpres-2.jpg"
-      class="sponsor-image"
-      alt="Agerpres"
-    />
-    <img
-      src="../../assets/images/Sponsors/anif.jpg"
-      class="sponsor-image"
-      alt="Agenția Națională de Îmbunătățiri Funciare"
-    />
-    <img
-      src="../../assets/images/Sponsors/bacolux_logo.png"
-      class="sponsor-image"
-      alt="Bacolux"
-    />
-    <img
-      src="../../assets/images/Sponsors/BenQ_3D_P_CMYK_Sm-4.png"
-      class="sponsor-image"
-      alt="BenQ"
-    />
-    <img
-      src="../../assets/images/Sponsors/civitas.jpg"
-      class="sponsor-image"
-      alt="Civitas"
-    />
-    <img
-      src="../../assets/images/Sponsors/cne-logo.jpg"
-      class="sponsor-image"
-      alt="CNE Cernavodă"
-    />
-    <img
-      src="../../assets/images/Sponsors/dcnews-.png"
-      class="sponsor-image"
-      alt="DC News"
-    />
-    <img
-      src="../../assets/images/Sponsors/dunarea-tv.jpg"
-      class="sponsor-image"
-      alt="Dunărea TV"
-    />
-    <img
-      src="../../assets/images/Sponsors/elcomex-logo.jpg"
-      class="sponsor-image"
-      alt="Elcomex"
-    />
-    <img
-      src="../../assets/images/Sponsors/green-sound-team-logo.jpg"
-      class="sponsor-image"
-      alt="Green Sound Team"
-    />
-    <img
-      src="../../assets/images/Sponsors/megaimage-png.png"
-      class="sponsor-image"
-      alt="Mega Image"
-    />
-    <img
-      src="../../assets/images/Sponsors/Navrom.png"
-      class="sponsor-image"
-      alt="Cernavodă Shipyard SRL"
-    />
-    <img
-      src="../../assets/images/Sponsors/new_sigla-P45-01-GIFF.jpg"
-      class="sponsor-image"
-      alt="Paralela 45"
-    />
-    <img
-      src="../../assets/images/Sponsors/NISAN.jpg"
-      class="sponsor-image"
-      alt="NISAN"
-    />
-    <img
-      src="../../assets/images/Sponsors/nuclearelectrica-logo.jpg"
-      class="sponsor-image"
-      alt="Societatea Nuclearelectrica SA"
-    />
-    <img
-      src="../../assets/images/Sponsors/Paradis-Tours-1.png"
-      class="sponsor-image"
-      alt="Paradis"
-    />
-    <img
-      src="../../assets/images/Sponsors/politia-frontiera.jpg"
-      class="sponsor-image"
-      alt="Poliția de Frontieră"
-    />
-    <img
-      src="../../assets/images/Sponsors/romsilva.jpg"
-      class="sponsor-image"
-      alt="Direcția Silvică - Constanța"
-    />
-    <img
-      src="../../assets/images/Sponsors/RRA.png"
-      class="sponsor-image"
-      alt="Radio RomâniaActualități"
-    />
-    <img
-      src="../../assets/images/Sponsors/ST.png"
-      class="sponsor-image"
-      alt="Știință și Tehnică"
-    />
-    <img
-      src="../../assets/images/Sponsors/SteamaOrasului-Cernavoda.jpg"
-      class="sponsor-image"
-      alt="Primăria Cernavodă"
-    />
-    <img
-      src="../../assets/images/Sponsors/admin-ajax-nou.png"
-      class="sponsor-image"
-      alt="World Jiu-Jitsu Kobudo Organization"
-    />
+    <img src="../../assets/images/Sponsors/Screenshot-72-1.webp" class="sponsor-image" alt="K2" />
+    <img src="../../assets/images/Sponsors/download-3.webp" class="sponsor-image" alt="Dyomedica CND" />
+    <img src="../../assets/images/Sponsors/ZAKA.webp" class="sponsor-image" alt="ZAKA" />
+    <img src="../../assets/images/Sponsors/Whiz-Junior.webp" class="sponsor-image" alt="Whiz Juniors" />
+    <img src="../../assets/images/Sponsors/sts-300x300.webp" class="sponsor-image" alt="STS" />
+
+    <img src="../../assets/images/Sponsors/aesthetic-magazine-fb-e1687294217117.webp" class="sponsor-image"
+      alt="Aesthetic Magazine" />
+    <img src="../../assets/images/Sponsors/Aleph-News-.webp" class="sponsor-image" alt="Aleph News" />
+
+    <img src="../../assets/images/Sponsors/anif.jpg" class="sponsor-image"
+      alt="Agenția Națională de Îmbunătățiri Funciare" />
+    <img src="../../assets/images/Sponsors/BenQ_3D_P_CMYK_Sm-4.png" class="sponsor-image" alt="BenQ" />
+    <img src="../../assets/images/Sponsors/civitas.jpg" class="sponsor-image" alt="Civitas" />
+    <!-- <img src="../../assets/images/Sponsors/politia-frontiera.jpg" class="sponsor-image" alt="Poliția de Frontieră" /> -->
+    <img src="../../assets/images/Sponsors/romsilva.jpg" class="sponsor-image" alt="Direcția Silvică - Constanța" />
+    <img src="../../assets/images/Sponsors/RRA.png" class="sponsor-image" alt="Radio România Actualități" />
+    <img src="../../assets/images/Sponsors/ST.png" class="sponsor-image" alt="Știință și Tehnică" />
+    <img src="../../assets/images/Sponsors/SteamaOrasului-Cernavoda.jpg" class="sponsor-image"
+      alt="Primăria Cernavodă" />
+    <img src="../../assets/images/Sponsors/admin-ajax-nou.png" class="sponsor-image"
+      alt="World Jiu-Jitsu Kobudo Organization" />
   </div>
 </div>
