added sponsor images

--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -15,7 +15,6 @@
       alt="Agenția Națională de Îmbunătățiri Funciare" />
     <img src="../../assets/images/Sponsors/BenQ_3D_P_CMYK_Sm-4.png" class="sponsor-image" alt="BenQ" />
     <img src="../../assets/images/Sponsors/civitas.jpg" class="sponsor-image" alt="Civitas" />
-    <!-- <img src="../../assets/images/Sponsors/politia-frontiera.jpg" class="sponsor-image" alt="Poliția de Frontieră" /> -->
     <img src="../../assets/images/Sponsors/romsilva.jpg" class="sponsor-image" alt="Direcția Silvică - Constanța" />
     <img src="../../assets/images/Sponsors/RRA.png" class="sponsor-image" alt="Radio România Actualități" />
     <img src="../../assets/images/Sponsors/ST.png" class="sponsor-image" alt="Știință și Tehnică" />
@@ -23,5 +22,11 @@
       alt="Primăria Cernavodă" />
     <img src="../../assets/images/Sponsors/admin-ajax-nou.png" class="sponsor-image"
       alt="World Jiu-Jitsu Kobudo Organization" />
+    <img src="../../assets/images/Sponsors/nuclearelectrica-logo.jpg" class="sponsor-image" alt="Nuclearelectrica" />
+    <img src="../../assets/images/Sponsors/dcnews-.png" class="sponsor-image" alt="DC News" />
+    <img src="../../assets/images/Sponsors/Despre-compania-UTI-Constructon-and-Facility-Management-1024x1024-1.webp"
+      class="sponsor-image" alt="UTI-Constructon-and-Facility-Management" />
+    <img src="../../assets/images/Sponsors/Tolrem.webp" class="sponsor-image" alt="Tolrem" />
+
   </div>
 </div>
