--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -1,32 +1,36 @@
 <h2 class="section-title">{{ 'officialPartners' | translate }}</h2>
 <div class="row">
   <div class="col vertical-align-content">
+    <img src="../../assets/images/Sponsors/nuclearelectrica-logo.jpg" class="sponsor-image" alt="Nuclearelectrica" />
+    <img src="../../assets/images/Sponsors/Tolrem.webp" class="sponsor-image" alt="Tolrem" />
+    <img src="../../assets/images/Sponsors/Whiz-Junior.webp" class="sponsor-image" alt="Whiz Juniors" />
+    <img src="../../assets/images/Sponsors/ZAKA.webp" class="sponsor-image" alt="ZAKA" />
     <img src="../../assets/images/Sponsors/Screenshot-72-1.webp" class="sponsor-image" alt="K2" />
     <img src="../../assets/images/Sponsors/download-3.webp" class="sponsor-image" alt="Dyomedica CND" />
-    <img src="../../assets/images/Sponsors/ZAKA.webp" class="sponsor-image" alt="ZAKA" />
-    <img src="../../assets/images/Sponsors/Whiz-Junior.webp" class="sponsor-image" alt="Whiz Juniors" />
-    <img src="../../assets/images/Sponsors/sts-300x300.webp" class="sponsor-image" alt="STS" />
+    <img src="../../assets/images/Sponsors/Despre-compania-UTI-Constructon-and-Facility-Management-1024x1024-1.webp"
+      class="sponsor-image" alt="UTI-Constructon-and-Facility-Management" />
+    <img src="../../assets/images/Sponsors/cryptodata.webp" class="sponsor-image" alt="cryptodata" />
 
+    <img src="../../assets/images/Sponsors/RRA.png" class="sponsor-image" alt="Radio România Actualități" />
+    <img src="../../assets/images/Sponsors/Aleph-News-.webp" class="sponsor-image" alt="Aleph News" />
     <img src="../../assets/images/Sponsors/aesthetic-magazine-fb-e1687294217117.webp" class="sponsor-image"
       alt="Aesthetic Magazine" />
-    <img src="../../assets/images/Sponsors/Aleph-News-.webp" class="sponsor-image" alt="Aleph News" />
+    <img src="../../assets/images/Sponsors/dcnews-.png" class="sponsor-image" alt="DC News" />
 
-    <img src="../../assets/images/Sponsors/anif.jpg" class="sponsor-image"
-      alt="Agenția Națională de Îmbunătățiri Funciare" />
+    <img src="../../assets/images/Sponsors/ST.png" class="sponsor-image" alt="Știință și Tehnică" />
+
     <img src="../../assets/images/Sponsors/BenQ_3D_P_CMYK_Sm-4.png" class="sponsor-image" alt="BenQ" />
     <img src="../../assets/images/Sponsors/civitas.jpg" class="sponsor-image" alt="Civitas" />
+
+    <img src="../../assets/images/Sponsors/sts-300x300.webp" class="sponsor-image" alt="STS" />
+    <img src="../../assets/images/Sponsors/anif.jpg" class="sponsor-image"
+      alt="Agenția Națională de Îmbunătățiri Funciare" />
     <img src="../../assets/images/Sponsors/romsilva.jpg" class="sponsor-image" alt="Direcția Silvică - Constanța" />
-    <img src="../../assets/images/Sponsors/RRA.png" class="sponsor-image" alt="Radio România Actualități" />
-    <img src="../../assets/images/Sponsors/ST.png" class="sponsor-image" alt="Știință și Tehnică" />
     <img src="../../assets/images/Sponsors/SteamaOrasului-Cernavoda.jpg" class="sponsor-image"
       alt="Primăria Cernavodă" />
     <img src="../../assets/images/Sponsors/admin-ajax-nou.png" class="sponsor-image"
       alt="World Jiu-Jitsu Kobudo Organization" />
-    <img src="../../assets/images/Sponsors/nuclearelectrica-logo.jpg" class="sponsor-image" alt="Nuclearelectrica" />
-    <img src="../../assets/images/Sponsors/dcnews-.png" class="sponsor-image" alt="DC News" />
-    <img src="../../assets/images/Sponsors/Despre-compania-UTI-Constructon-and-Facility-Management-1024x1024-1.webp"
-      class="sponsor-image" alt="UTI-Constructon-and-Facility-Management" />
-    <img src="../../assets/images/Sponsors/Tolrem.webp" class="sponsor-image" alt="Tolrem" />
+
 
   </div>
 </div>
